--- a/help.html
+++ b/help.html
@@ -45,15 +45,17 @@
 
 			<p>
 				<a href="index.html">Top</a><br/>
+				<a href="all.html">Tools</a><br/>
 				<a href="tags.html">Tags</a><br/>
 				<a href="index.html">Search</a><br/>
 				<br/>
 				<a href="framework.html">Frameworks</a><br/>
+				<a href="language.html">Languages</a><br/>
 				<br/>
 				<a href="https://github.com/Sophietje/Verification-Tool-Overview/">Backend repo</a><br/>
 				<a href="https://github.com/slebok/slebok.github.io/tree/master/proverb">Frontend repo</a><br/>
 				<br/>
-				<a href="index.html">Help</a><br/>
+				<a href="help.html">Help</a><br/>
 			</p>
 		</div>
 		<div class="main">
