--- a/index.html
+++ b/index.html
@@ -67,22 +67,28 @@
 				<p>We classify all tools in this book as belonging to one of the six levels:</p>
 				<ul>
 					<li>
-						<a href="pv0.html">PV0</a> — tools that manipulate given and produced software artefacts with some degree of rigour. Conceptually such artefacts then may correspond to mathematical and formal entities, but this correspondence is mostly a matter of expectations. This category should be reasonably unpopulated since we mostly avoid to include such tools here.
+						<a href="pv0.html">PV0</a> — 
+<<PV_TEXT$0$>>
 					</li>
 					<li>
-						<a href="pv1.html">PV1</a> — tools that encode the formal expectations about the artefacts that they manipulate, and report back to their users about found inconsistencies. A typical resident of this level could be a linter: a tool that analyses your program and complains about places where your program does not conform to its expectations.
+						<a href="pv1.html">PV1</a> — 
+<<PV_TEXT$1$>>
 					</li>
 					<li>
-						<a href="pv2.html">PV2</a> — tools that allow the end user to control the properties that are being checked. For instance, it could be a tool that analyses user-written assertions in the code and verifies that they are indeed always respected by the program.
+						<a href="pv2.html">PV2</a> — 
+<<PV_TEXT$2$>>
 					</li>
 					<li>
-						<a href="pv3.html">PV3</a> — tools that operate within a particular paradigm and derive their actions, conclusions and even properties that they need to check, from a built-in formal specification. For example, such a tool can guarantee freedom of deadlocks in a multi-threaded application, or data consistency in a database management system.
+						<a href="pv3.html">PV3</a> — 
+<<PV_TEXT$3$>>
 					</li>
 					<li>
-						<a href="pv4.html">PV4</a> — tools that allow the end user to write their own specifications and “compile” them to fully formal mathematical representations that can be combined with mathematical representations of programs themselves or their desired properties, and verified together. Such a tool can already help someone make claims and guarantees about correctness, complexity or predicted performance of a novel, previously non-existing, garbage collection algorithm. Some of PV4 tools focus on synthesising a software artefact that satisfies the desired conditions, instead of checking an existing one for conformance.
+						<a href="pv4.html">PV4</a> — 
+<<PV_TEXT$4$>>
 					</li>
 					<li>
-						<a href="pv5.html">PV5</a> — tools that can handle different user-written specifications, encode a wide range of different formulae for properties, and are capable of producing proofs of such properties together with inferring the correctness of such proofs.
+						<a href="pv5.html">PV5</a> — 
+<<PV_TEXT$5$>>
 					</li>
 				</ul>
 				<p class="red"><strong>NB</strong>: this project is a work in progress, and thus may momentarily contain imperfect or erroneous data! Use at your own risk or <a href="mailto:s.a.m.lathouwers@utwente.nl,v.zaytsev@utwente.nl">get in touch</a>!</p>
