Help becomes Credits

--- a/credits.html
+++ b/credits.html
@@ -8,7 +8,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="initial-scale=1.0"/>
-		<title>ProVerB Help</title>
+		<title>Give ProVerB credit where credit is due</title>
 		<link href="main.css" rel="stylesheet" type="text/css" />
 		<link href="tabber.css" rel="stylesheet" type="text/css" media="screen" />
 		<script type="text/javascript" src="tabber.js" />
@@ -42,7 +42,6 @@
 			<a href="index.html"><img src="proverb.png" alt="ProVerB"/></a>
 			<h1>ProVerB:</h1>
 			<h2>Program<br/>Verification<br/>Book</h2>
-
 			<p>
 				<a href="index.html">Top</a><br/>
 				<a href="all.html">Tools</a><br/>
@@ -55,7 +54,7 @@
 				<a href="https://github.com/Sophietje/Verification-Tool-Overview/">Backend repo</a><br/>
 				<a href="https://github.com/slebok/slebok.github.io/tree/master/proverb">Frontend repo</a><br/>
 				<br/>
-				<a href="help.html">Help</a><br/>
+				<a href="credits.html">Credits</a><br/>
 			</p>
 		</div>
 		<div class="main">
