--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 			<a href="index.html"><img src="proverb.png" alt="ProVerB"/></a>
 			<h1>ProVerB:</h1>
 			<h2>Program<br/>Verification<br/>Book</h2>
-
 			<p>
 				<a href="index.html">Top</a><br/>
 				<a href="all.html">Tools</a><br/>
@@ -55,7 +54,7 @@
 				<a href="https://github.com/Sophietje/Verification-Tool-Overview/">Backend repo</a><br/>
 				<a href="https://github.com/slebok/slebok.github.io/tree/master/proverb">Frontend repo</a><br/>
 				<br/>
-				<a href="help.html">Help</a><br/>
+				<a href="credits.html">Credits</a><br/>
 			</p>
 		</div>
 		<div class="main">
@@ -63,7 +62,7 @@
 			<div class="tabbertab"><h2>Help</h2>
 				<h1 class="fbs">ProVerB: Program Verification Book</h1>
 				<br clear="both"/>
-				<p><strong>ProVerB</strong> is a project aimed at explaining program verification tools to practicing software developers, and at helping them to find they way around the available tools, clearly and briefly summarising the main purpose of the tool, its current status, relations to other tools, etc. <a href="help.html" class="nobold">Read more about the project on the help page</a>.</p>
+				<p><strong>ProVerB</strong> is a project aimed at explaining program verification tools to practicing software developers, and at helping them to find they way around the available tools, clearly and briefly summarising the main purpose of the tool, its current status, relations to other tools, etc. <a href="credits.html" class="nobold">Read more about the project on the credits page</a>.</p>
 				<p>We classify all tools in this book as belonging to one of the six levels:</p>
 				<ul>
 					<li>
