Make logo smaller and position title next to it

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 			</div>
 		</div>
 		<div class="left">
-			<a href="index.html"><img src="proverb.png" alt="ProVerB"/></a>
-			<h1>ProVerB:</h1>
-			<h2>Program<br/>Verification<br/>Book</h2>
+      <div class="logo">
+        <a href="index.html"><img src="proverb.png" alt="ProVerB"/></a>
+        <h3>Program<br/>Verification<br/>Book</h3>
+      </div>
 			<p>
 				<a href="index.html">Top</a><br/>
 				<a href="all.html">Tools</a><br/>
