Updated navbar looks

--- a/index.html
+++ b/index.html
@@ -43,20 +43,30 @@
         <a href="index.html"><img src="proverb.png" alt="ProVerB"/></a>
         <h3>Program<br/>Verification<br/>Book</h3>
       </div>
-			<p>
-				<a href="index.html">Top</a><br/>
-				<a href="all.html">Tools</a><br/>
-				<a href="tags.html">Tags</a><br/>
-				<a href="index.html">Search</a><br/>
-				<br/>
-				<a href="framework.html">Frameworks</a><br/>
-				<a href="language.html">Languages</a><br/>
-				<br/>
-				<a href="https://github.com/Sophietje/Verification-Tool-Overview/">Backend repo</a><br/>
-				<a href="https://github.com/slebok/slebok.github.io/tree/master/proverb">Frontend repo</a><br/>
-				<br/>
-				<a href="credits.html">Credits</a><br/>
-			</p>
+      <nav>
+      	<ul style="margin: 0;padding: 0;">
+          <li>
+            <a href="index.html">Homepage</a>
+          </li>
+          <li>
+            <a href="all.html">All tools</a>
+          </li>
+          <ul>
+            <li>
+              <a href="tags.html">Tags</a>
+            </li>
+            <li>
+              <a href="framework.html">Frameworks</a>
+            </li>
+            <li>
+              <a href="language.html">Languages</a>
+            </li>
+          </ul>
+          <li>
+            <a href="credits.html">About</a>
+          </li>
+        </ul>
+      </nav>
 		</div>
 		<div class="main">
 		<div class="tabber">
