Move PV-tags from top to navbar

--- a/credits.html
+++ b/credits.html
@@ -26,18 +26,6 @@
 		</script>
 	</head>
 	<body>
-		<div class="top">
-			<div class="pvs">
-				<h1>
-					<span class="tag"><a href="pv0.html" title="unprocessed">PV0</a></span>
-					<span class="tag"><a href="pv1.html" title="solvers/linters">PV1</a></span>
-					<span class="tag"><a href="pv2.html" title="property checkers">PV2</a></span>
-					<span class="tag"><a href="pv3.html" title="monoverifiers">PV3</a></span>
-					<span class="tag"><a href="pv4.html" title="spec compilers">PV4</a></span>
-					<span class="tag"><a href="pv5.html" title="proof assistants">PV5</a></span>
-				</h1>
-			</div>
-		</div>
 		<div class="left">
       <div class="logo">
 			  <a href="index.html"><img src="proverb.png" alt="ProVerB"/></a>
@@ -52,17 +40,27 @@
             <a href="all.html">All tools</a>
           </li>
           <ul>
-            <li>
-              <a href="tags.html">Tags</a>
-            </li>
-            <li>
-              <a href="framework.html">Frameworks</a>
-            </li>
-            <li>
-              <a href="language.html">Languages</a>
-            </li>
-          </ul>
+            
           <li>
+              <a href="pv0.html" title="unprocessed">PV0</a>
+            </li><li>
+              <a href="pv1.html" title="solvers/linters">PV1</a>
+            </li><li>
+              <a href="pv2.html" title="property checkers">PV2</a>
+            </li><li>
+              <a href="pv3.html" title="monoverifiers">PV3</a>
+            </li><li>
+              <a href="pv4.html" title="spec compilers">PV4</a>
+            </li><li>
+              <a href="pv5.html" title="proof assistants">PV5</a>
+            </li><li>
+              <a href="framework.html">Frameworks</a>
+            </li></ul>
+          <li>
+              <a href="tags.html">Tags</a>
+            </li><li>
+              <a href="language.html">Languages</a>
+            </li><li>
             <a href="credits.html">About</a>
           </li>
         </ul>
