Introduce the new PV2 and add its description — massage other descriptions as well

--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
           <ul>
             
           <li>
-              <a href="pv0.html" title="unprocessed">PV0</a>
+              <a href="pv0.html" title="unprocessed/nonverifying">PV0</a>
             </li><li>
               <a href="pv1.html" title="solvers/linters">PV1</a>
+            </li><li>
+              <a href="pv2.html" title="synthesisers">PV2</a>
             </li><li>
               <a href="pv3.html" title="property checkers">PV3</a>
             </li><li>
@@ -81,6 +83,10 @@
 					<li>
 						<a href="pv1.html">PV1</a> — 
 <<PV_TEXT$1$>>
+					</li>
+					<li>
+						<a href="pv2.html">PV2</a> — 
+<<PV_TEXT$2$>>
 					</li>
 					<li>
 						<a href="pv3.html">PV3</a> — 
