Move meta-tab to the side of tool pages

--- a/credits.html
+++ b/credits.html
@@ -41,21 +41,23 @@
           </li>
           <ul>
             
-          <li>
-              <a href="pv0.html" title="unprocessed">PV0</a>
-            </li><li>
-              <a href="pv1.html" title="solvers/linters">PV1</a>
-            </li><li>
-              <a href="pv2.html" title="property checkers">PV2</a>
-            </li><li>
-              <a href="pv3.html" title="monoverifiers">PV3</a>
-            </li><li>
-              <a href="pv4.html" title="spec compilers">PV4</a>
-            </li><li>
-              <a href="pv5.html" title="proof assistants">PV5</a>
-            </li><li>
-              <a href="framework.html">Frameworks</a>
-            </li></ul>
+					<li>
+							<a href="pv0.html" title="unprocessed/nonverifying">PV0</a>
+						</li><li>
+							<a href="pv1.html" title="solvers/linters">PV1</a>
+						</li><li>
+							<a href="pv2.html" title="synthesisers">PV2</a>
+						</li><li>
+							<a href="pv3.html" title="property checkers">PV3</a>
+						</li><li>
+							<a href="pv4.html" title="monoverifiers">PV4</a>
+						</li><li>
+							<a href="pv5.html" title="spec compilers">PV5</a>
+						</li><li>
+							<a href="pv6.html" title="proof assistants">PV6</a>
+						</li><li>
+							<a href="framework.html">Frameworks</a>
+						</li></ul>
           <li>
               <a href="tags.html">Tags</a>
             </li><li>
@@ -67,8 +69,7 @@
       </nav>
 		</div>
 		<div class="main">
-		<div class="tabber">
-			<div class="tabbertab"><h2>Help</h2>
+			<div class="tabbertab"><h4>About</h4>
 				<a href="https://www.utwente.nl/en/eemcs/fmt/"><img src="fmt.png" style="max-width:200px;float:right" alt="Formal Methods and Tools" /></a>
 				<h1 class="fbs">ProVerB: Program Verification Book</h1>
 				<br clear="both"/>
@@ -82,10 +83,9 @@
 					<li>All referenced works of art, science and engineering, are subject to their own individual copyrights.</li>
 				</ul>
 			</div>
-		</div>
 		<br/><hr/>
 		<div class="f">
-			Last updated: <strong>January 2022</strong>.
+			Last updated: <strong>April 2022</strong>.
 		</div>
 	</div>
 	</body>
