Rename 'Language' to 'Specification format'

--- a/credits.html
+++ b/credits.html
@@ -61,7 +61,7 @@
           <li>
               <a href="tags.html">Tags</a>
             </li><li>
-              <a href="language.html">Languages</a>
+              <a href="specificationformat.html">Specification formats</a>
             </li><li>
             <a href="credits.html">About</a>
           </li>
