Move from hardcoded PVx descriptions to tags being valid entries

--- a/index.html
+++ b/index.html
@@ -74,31 +74,31 @@
 				<p>We classify all tools in this book as belonging to one of the six levels:</p>
 				<ul>
 					<li>
-						<a href="pv0.html">PV0</a> — 
+						<a href="pv0.html">PV0</a>
 <<PV_TEXT$0$>>
 					</li>
 					<li>
-						<a href="pv1.html">PV1</a> — 
+						<a href="pv1.html">PV1</a>
 <<PV_TEXT$1$>>
 					</li>
 					<li>
-						<a href="pv2.html">PV2</a> — 
+						<a href="pv2.html">PV2</a>
 <<PV_TEXT$2$>>
 					</li>
 					<li>
-						<a href="pv3.html">PV3</a> — 
+						<a href="pv3.html">PV3</a>
 <<PV_TEXT$3$>>
 					</li>
 					<li>
-						<a href="pv4.html">PV4</a> — 
+						<a href="pv4.html">PV4</a>
 <<PV_TEXT$4$>>
 					</li>
 					<li>
-						<a href="pv5.html">PV5</a> — 
+						<a href="pv5.html">PV5</a>
 <<PV_TEXT$5$>>
 					</li>
 					<li>
-						<a href="pv6.html">PV6</a> — 
+						<a href="pv6.html">PV6</a>
 <<PV_TEXT$6$>>
 					</li>
 				</ul>
