Update front-facing pages

--- a/credits.html
+++ b/credits.html
@@ -67,23 +67,28 @@
       </nav>
 		</div>
 		<div class="main">
-			<div class="tabbertab"><h4>About</h4>
-				<a href="https://www.utwente.nl/en/eemcs/fmt/"><img src="fmt.png" style="max-width:200px;float:right" alt="Formal Methods and Tools" /></a>
-				<h1 class="fbs">ProVerB: Program Verification Book</h1>
-				<br clear="both"/>
-				<ul>
-					<li><strong>ProVerB</strong> is a project by the members of the <a href="https://www.utwente.nl/en/eemcs/fmt/" class="nobold">Formal Methods and Tools</a> group from the <a href="https://www.utwente.nl/en/" class="nobold">University of Twente</a>: <em><a href="https://wwwhome.ewi.utwente.nl/~lathouwerssam/">Sophie Lathouwers</a> and <a href="http://grammarware.net/">Vadim Zaytsev</a></em></li>
-					<li>The page is maintained by <a href="http://grammarware.github.io/">Vadim Zaytsev</a> a.k.a. @<a href="http://grammarware.net">grammarware</a></li>
-					<li>The tabber code used within ProVerB, is derivative from <a href="http://www.kean.edu/~gkolodiy/5223/tabber.html">the one made by Patrick Fitzgerald</a> and distributed under <a href="https://opensource.org/licenses/mit-license.php">the MIT license</a>.</li>
-					<li>The logo of ProVerB is based on the open book logo by <a href="https://commons.wikimedia.org/wiki/File:Open_Book_icon.svg">Icon Lauk</a> from the <a href="https://thenounproject.com/icon/open-book-2238057/">Noun Project</a>, CC-BY 2018.</li>
-					<li>Tool descriptions and depictions used within this project, might be imperfect, because most are created without consulting the original authors</li>
-					<li>Any citations and other pieces of information from the tool papers are claimed to be <strong>fair use</strong>. Different countries define this differently, but, for instance, within US (where this website, as the rest of GitHub, is hosted) this conforms to United States Code, Title 17, Section 107, because this project exists <em>“…for purposes such as criticism, comment, teaching, scholarship, or research…”</em>.</li>
-					<li>All referenced works of art, science and engineering, are subject to their own individual copyrights.</li>
-				</ul>
-			</div>
+			<a href="https://www.utwente.nl/en/eemcs/fmt/"><img src="fmt.png" style="max-width:200px;float:right" alt="Formal Methods and Tools" /></a>
+			<h1 class="fbs">About ProVerB: Program Verification Book</h1>
+			<br clear="both"/>
+			<ul>
+				<li><strong>ProVerB</strong> is a project by the members of the <a href="https://www.utwente.nl/en/eemcs/fmt/">Formal Methods and Tools</a> group from the <a href="https://www.utwente.nl/en/">University of Twente</a>: <a class="sic" href="https://wwwhome.ewi.utwente.nl/~lathouwerssam/">Sophie Lathouwers</a> and <a class="sic" href="http://grammarware.net/">Vadim Zaytsev</a></li>
+				<li>
+					<em><a class="sic" href="https://doi.org/10.1145/3550355.3552426">Modelling Program Verification Tools for Software Engineers</a></em> is a paper at <a href="https://conf.researchr.org/home/models-2022">MoDELS’22</a> that explains a lot about the goals of the project and the design of its constituents.
+					<ul>
+						<li>Artefact: <a href="https://doi.org/10.4121/20347950">doi:10.4121/20347950</a> (being <a href="https://www.go-fair.org/fair-principles/">FAIR</a>)</li>
+						<li>Repository: <a href="https://github.com/Sophietje/Verification-Tool-Overview">@Sophietje/Verification-Tool-Overview</a> (we accept pull requests!)</li>
+						<li>Contributors: <a href="https://github.com/Sophietje/Verification-Tool-Overview/graphs/contributors">GitHub Insights</a></li>
+					</ul>
+				</li>
+				<li>The page is maintained by <a class="sic" href="http://grammarware.github.io/">Vadim Zaytsev</a> a.k.a. @<a class="sic" href="http://grammarware.net">grammarware</a></li>
+				<li>The logo of ProVerB is based on the open book logo by <a class="sic" href="https://commons.wikimedia.org/wiki/File:Open_Book_icon.svg">Icon Lauk</a> from the <a href="https://thenounproject.com/icon/open-book-2238057/">Noun Project</a>, CC-BY 2018.</li>
+				<li>Tool descriptions and depictions used within this project, might be imperfect, because most are created without consulting the original authors</li>
+				<li>Any citations and other pieces of information from the tool papers are claimed to be <strong>fair use</strong>. Different countries define this differently, but, for instance, within US (where this website, as the rest of GitHub, is hosted) this conforms to United States Code, Title 17, Section 107, because this project exists <em>“…for purposes such as criticism, comment, teaching, scholarship, or research…”</em>.</li>
+				<li>All referenced works of art, science and engineering, are subject to their own individual copyrights.</li>
+			</ul>
 		<br/><hr/>
 		<div class="f">
-			Last updated: <strong>May 2022</strong>.
+			Last updated: <strong>December 2022</strong>.
 		</div>
 	</div>
 	</body>
