--- a/index.html
+++ b/index.html
@@ -67,10 +67,9 @@
       </nav>
 		</div>
 		<div class="main">
-			<div class="tabbertab"><h4>Homepage</h4>
 				<h1 class="fbs">ProVerB: Program Verification Book</h1>
 				<br clear="both"/>
-				<p><strong>ProVerB</strong> is a project aimed at explaining program verification tools to practicing software developers, and at helping them to find they way around the available tools, clearly and briefly summarising the main purpose of the tool, its current status, relations to other tools, etc. <a href="credits.html" class="nobold">Read more about the project on the credits page</a>.</p>
+				<p><strong>ProVerB</strong> is a project aimed at explaining program verification tools to practicing software developers, and at helping them to find they way around the available tools, clearly and briefly summarising the main purpose of the tool, its current status, relations to other tools, etc. You can <a href="credits.html" class="nobold">read more about the project on the credits page</a> or <a href="https://github.com/Sophietje/Verification-Tool-Overview">visit the dataset repository</a>.</p>
 				<p>We classify all tools in this book as belonging to one of the six levels:</p>
 				<ul>
 					<li>
@@ -104,10 +103,9 @@
 				</ul>
 				<p class="red"><strong>NB</strong>: this project is a work in progress, and thus may momentarily contain imperfect or erroneous data! Use at your own risk or <a href="mailto:s.a.m.lathouwers@utwente.nl,v.zaytsev@utwente.nl">get in touch</a>!</p>
 				<p>The PV-hierarchy does not represent how “worthy” or “important” a tool is, merely how much it expects and demands of its end user, and what it can offer back. In many cases having a lower-PV-level tool is more preferable because it is easier in use and is less ambitious about the effort investment. Often tools of a lower PV-level are built “on top” of tools of higher level which they run as a backend.</p>
-			</div>
 		<br/><hr/>
 		<div class="f">
-			Last updated: <strong>May 2022</strong>.
+			Last updated: <strong>December 2022</strong>.
 		</div>
 	</div>
 	</body>
